modal overflow fixed

--- a/frontend/src/components/student/create_student_form.css
+++ b/frontend/src/components/student/create_student_form.css
@@ -209,6 +209,7 @@ select:invalid {
   left:0px;
   top:0px;
   color: white;
+  overflow-y: auto;
 }
 
 .modal-closing-x {
